--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.data.mongodb/uri=mongodb
 data.exception.message1=Profile Already Exists !
 data.exception.message2=Profile Not Found !
 data.exception.message3=Database connectivity  Lost !
+
+logging.level.org.springframework.web=DEBUG
+logging.level.com.stackroute.logging=DEBUG
